# tagpath

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md
.claude/skills/tagpath/: SKILL.md
.github/workflows/: ci.yml  release.yml
lang/: c.toml  c.yml  clojure.toml  clojure.yml  common-lisp.toml  cpp.toml  cpp.yml  crystal.toml  csharp.toml  csharp.yml  css.toml  css.yml  d.toml  d.yml  dart.toml  dart.yml  elixir.toml  elixir.yml  erlang.toml  fsharp.toml  gleam.toml  go.toml  go.yml  haskell.toml  haskell.yml  java.toml  java.yml  javascript.toml  javascript.yml  julia.toml  kotlin.toml  kotlin.yml  lua.toml  lua.yml  nim.toml  nim.yml  objective-c.toml  ocaml.toml  odin.toml  odin.yml  (+27 more)
presets/: immutable-tag.toml  immutable-tag.yml
src/: main.rs
src/alias/: mod.rs
src/config/: mod.rs
src/extract/: mod.rs
src/graph/: mod.rs
src/lint/: mod.rs
src/parser/: mod.rs
src/prose/: mod.rs
src/search/: mod.rs
src/treesitter/: mod.rs
