[package]
name = "tagpath"
version = "0.2.0"
edition = "2024"
description = "Tag Path — parse, lint, and search tag-based identifiers across languages"
license = "MIT"
repository = "https://github.com/btakita/tagpath"
keywords = ["naming", "convention", "identifier", "parser", "lint"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
walkdir = "2"
